--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -3,6 +3,7 @@ name: CI/CD
 on:
   push:
     branches: [ main ]
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -16,9 +17,6 @@ on:
         - patch
         - minor
         - major
-  push:
-    tags:
-      - 'v*'
 
 jobs:
   test:
