--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,4 +34,4 @@ jobs:
       run: go test -short -v ./...
     
     - name: Build binary
-      run: go build -o chisel ./cmd/chisel/
+      run: go build -o forge ./cmd/forge/
